[build-system]
requires = ["setuptools>=61.0","wheel"]

[project]
name = "universal-audio-wav-grabber"
version = "0.1.0"
description = "Convert Spotify / Apple Music / YouTube URLs to WAV/MP3/FLAC/M4A with advanced presets"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "leebrooks18" }]

[project.scripts]
universal-audio = "universal_audio.cli:cli"

[project.optional-dependencies]
all = ["yt-dlp","mutagen","spotipy","click","requests"]
